# cloud-bucket-explorer

./: Cargo.toml  Readme.md
src/: lib.rs  main.rs  routes.rs
src/cos/: cloud.rs
src/template_logic/: dashboard.rs  index.rs  mod.rs
src/view_models/: login.rs
templates/: bucket_removed.html  dashboard.html  deleteobject.html  error_generic.html  home.html  index.html  login.html  objectdetails.html  please_login.html  user.html
