[package]
name = "bucket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
tera = "1.8.0"
actix-web = "4"
cookie = "0.16.0"
serde = { version = "1", features = ["derive"] }
actix-session = { version = "0.7", features = ["cookie-session"] }
regex = "1.3.1"
serde_derive = "1.0.144"
serde-xml-rs = "0.6.0"
reqwest = { version = "0.11", features = ["json"] }
bytesize = {version = "1.1.0", features = ["serde"]}